# pine-cone-continue-delivery-platform

./: .bazelrc  .gitignore  BUILD.bazel  Dockerfile  Jenkinsfile  Jenkinsfile.groovy  README.md  WORKSPACE  pom.xml
cdp-alert-server/: pom.xml
cdp-code-analysis-domain/: BUILD.bazel  README.md  pom.xml
cdp-code-analysis-domain/dev/: docker-compose.yaml  gitlab-server.sh
cdp-code-analysis-domain/dev/db/: docker-compose.yaml  sql.sql
cdp-code-analysis-domain/src/main/java/codes/showme/pinecone/cdp/code/analysis/: CodePlatformType.java  GitlabRepoSync.java  Sync.java
cdp-code-analysis-domain/src/main/java/codes/showme/pinecone/cdp/code/analysis/domain/: GitLabRepoInfo.java  SyncGitLabCommitsEvent.java  SyncGitLabDiffsEvent.java  SyncGitLabRepoTask.java
cdp-code-analysis-domain/src/main/java/codes/showme/pinecone/cdp/code/analysis/gitlab/: GitLabCommitEventProcessor.java  GitLabDiffEventHandler.java  GitLabDiffWrapper.java  SyncGitLabCommitsEvent.java  SyncGitLabCommitsEventProcessor.java  SyncGitLabCommitsEventProcessorImpl.java  SyncGitlabDiffEvent.java
cdp-code-analysis-domain/src/main/java/codes/showme/pinecone/cdp/code/analysis/repository/: GitLabRepoInfoRepository.java  SyncGitLabCommitsEventRepository.java  SyncGitLabRepoTaskRepository.java  SyncGitlabDiffEventRepository.java
cdp-code-analysis-domain/src/test/java/codes/showme/pinecone/cdp/code/analysis/: GitlabRepoSyncTest.java  SyncTest.java
cdp-code-analysis-domain/src/test/resources/gitlab/: commit.json
cdp-code-analysis-domain/src/test/resources/gitlab/diff/: 1.newfile.diff  2.delete.diff  3.modify-1-file.diff  4.diff  5.diff  6.diff  7.diff  8.diff  9.diff  a.diff  normal.json
cdp-code-analysis-server/: BUILD.bazel  pom.xml
cdp-code-analysis-server/src/main/java/codes/showme/pinecone/cdp/code/analysis/: Main.java
cdp-code-analysis-server/src/main/resources/: application.yaml
cdp-domain/: BUILD.bazel  pom.xml
cdp-domain/src/main/java/codes/showme/pinecone/cdp/domain/: DomainEntity.java
cdp-domain/src/main/java/codes/showme/pinecone/cdp/domain/alert/: PrometheusAlert.java
cdp-domain/src/main/java/codes/showme/pinecone/cdp/domain/app/: App.java
cdp-domain/src/main/java/codes/showme/pinecone/cdp/domain/artifact/: Artifact.java  ArtifactCoordinate.java  ArtifactLabel.java  ArtifactType.java  DockerImageArtifact.java  DockerImageArtifactCoordinate.java  JavaArtifact.java  JavaArtifactCoordinate.java  TarArtifact.java  TarArtifactCoordinate.java
cdp-domain/src/main/java/codes/showme/pinecone/cdp/domain/commit/: Commit.java  Diff.java  FileHistory.java
cdp-domain/src/main/java/codes/showme/pinecone/cdp/domain/configuration/: AppConfig.java  Config.java  DeployConfig.java  Env.java  GlobalConfig.java
cdp-domain/src/main/java/codes/showme/pinecone/cdp/domain/deployment/: DeploymentHistory.java
cdp-domain/src/main/java/codes/showme/pinecone/cdp/domain/id/: Id.java  IdPrefix.java
cdp-domain/src/main/java/codes/showme/pinecone/cdp/domain/outalator/: Ticket.java  TicketContentType.java  TicketEvent.java  TicketEventType.java  TicketState.java  TicketTag.java
cdp-domain/src/main/java/codes/showme/pinecone/cdp/domain/pipeline/: Pipeline.java  PipelineExecResult.java  PipelineHistory.java
cdp-domain/src/main/java/codes/showme/pinecone/cdp/domain/repo/: Repo.java  RepoType.java  RepoUrl.java
cdp-domain/src/main/resources/: ebean.mf
cdp-domain/src/test/java/codes/showme/pinecone/cdp/domain/artifact/: ArtifactTest.java
cdp-domain/src/test/java/codes/showme/pinecone/cdp/domain/commit/: CommitTest.java  DiffTest.java
cdp-domain/src/test/java/codes/showme/pinecone/cdp/domain/outalator/: BUILD.bazel  TicketTest.java
cdp-domain/src/test/resources/prometheusAlert/: payload-example.json
cdp-hookhouse/: README.md  pom.xml
cdp-outalator-server/: BUILD.bazel
cdp-outalator-server/src/main/java/codes/showme/pinecone/cdp/outalator/: Main.java
cdp-outalator-server/src/main/resources/: BUILD.bazel
cdp-outalator-server/src/test/resources/: aliyun-sls-alert.json  aliyun-yun-monitor.http.txt
cdp-pb/: BUILD.bazel  pom.xml
cdp-pb/src/main/proto/: CdpEvent.proto  cdpEvent.proto  codeAnalysis.proto  dockerImageArtifact.proto  greeting.proto  javaArtifact.proto  tarArtifact.proto
cdp-tech-common-impl/: BUILD.bazel  pom.xml
cdp-tech-common-impl/src/main/java/codes/showme/pinecone/cdp/techcommon/: JsonServiceImpl.java  JsonServiceToJsonStringException.java  JsonServiceToObjectException.java
cdp-tech-common-impl/src/test/java/codes/showme/pinecone/cdp/techcommon/: JsonServiceImplTest.java
mysql-repository/: BUILD.bazel  pom.xml
mysql-repository/src/main/java/codes/showme/cds/artifact/mysql/repository/: ArtifactMysqlRespository.java
mysql-repository/src/test/java/codes/showme/cds/artifact/mysql/repository/: DdlGenerate.java
postgres-repository/: BUILD.bazel  pom.xml
postgres-repository/dev/: docker-compose.yaml
postgres-repository/src/test/java/codes/showme/pinecone/cdp/domain/: DDLGenerate.java
postgres-repository/src/test/resources/: application-test.yml  test-ebean.properties
server/: BUILD.bazel
server/dev/mysql/: Dockerfile
server/dev/mysql/init/: init.sql
server/src/main/java/codes/showme/pinecone/cdp/: Main.java
server/src/main/java/codes/showme/pinecone/cdp/grpc/: CodeAnalysisController.java  DockerImageArtifactController.java  JavaArtifactController.java  TarArtifactController.java
server/src/main/java/codes/showme/pinecone/cdp/web/api/: CreateSyncTaskReq.java  OutalatorRestController.java
server/src/main/java/codes/showme/pinecone/cdp/web/config/: CdpConfig.java
server/src/main/java/codes/showme/pinecone/cdp/web/controller/: CodeController.java  IndexController.java  OutalatorController.java
server/src/main/resources/: BUILD.bazel  application.yaml
server/src/test/: BUILD.bazel
server/src/test/java/codes/showme/pinecone/cdp/code/analysis/: GitlabRepoSyncTest.java
server/src/test/resources/: BUILD.bazel
spring-ioc-impl/: BUILD.bazel  pom.xml
spring-ioc-impl/src/main/java/codes/showme/pinecone/cdp/ioc/: SpringInstanceProvider.java
(+106 files in other folders)
