load("@rules_java//java:defs.bzl", "java_test")

java_library(
    name = "java_test_deps",
    visibility = ["//visibility:public"],
    exports = [
        "@maven//:junit_junit",
        "@maven//:org_hamcrest_hamcrest_library",
        "@maven//:org_testcontainers_postgresql",
        "@maven//:org_testcontainers_testcontainers",
    ],
)
