java_library(
    name = "cdp-code-analysis-domain",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = glob(["src/main/resources/**"]),
    visibility = ["//visibility:public"],
    deps = [
        "//cdp-domain",
        "//cdp-tech-common",
        "//cdp-tech-common-impl",
        "//spring-ioc-impl",
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:ch_qos_logback_logback_core",
        "@maven//:io_ebean_persistence_api",
        "@maven//:io_reflectoring_diffparser_diffparser",
        "@maven//:jakarta_annotation_jakarta_annotation_api",
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:org_gitlab4j_gitlab4j_api",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_springframework_spring_context",
    ],
)
