java_library(
    name = "cdp-code-analysis-server",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = glob(["src/main/resources/**"]),
    visibility = ["//visibility:public"],
    deps = [
        "//cdp-code-analysis-domain",
        "//cdp-domain",
        "//cdp-rocketmq-repository",
        "//cdp-tech-common",
        "//cdp-tech-common-impl",
        "//spring-ioc-impl",
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:ch_qos_logback_logback_core",
        "@maven//:io_ebean_persistence_api",
        "@maven//:io_github_lognet_grpc_spring_boot_starter",
        "@maven//:jakarta_annotation_jakarta_annotation_api",
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:org_apache_rocketmq_rocketmq_client",
        "@maven//:org_gitlab4j_gitlab4j_api",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_springframework_boot_spring_boot",
        "@maven//:org_springframework_boot_spring_boot_autoconfigure",
        "@maven//:org_springframework_boot_spring_boot_starter_web",
        "@maven//:org_springframework_spring_context",
    ],
)
