java_library(
    name = "cdp-domain",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = glob(["src/main/resources/**"]),
    visibility = ["//visibility:public"],
    deps = [
        "//cdp-tech-common",
        "@maven//:io_ebean_ebean",
        "@maven//:io_ebean_ebean_annotation",
        "@maven//:io_ebean_ebean_api",
        "@maven//:io_ebean_ebean_core",
        "@maven//:io_ebean_persistence_api",
        "@maven//:io_ebean_querybean_generator",
        "@maven//:io_reflectoring_diffparser_diffparser",
        "@maven//:javax_persistence_persistence_api",
        "@maven//:javax_validation_validation_api",
        "@maven//:org_apache_commons_commons_lang3",
    ],
)
