java_library(
    name = "cdp-outalator-server-lib",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = glob(["src/main/resources/**"]),
    deps = [
        "//cdp-domain",
        "//cdp-tech-common",
        "//spring-ioc-impl",
        "@maven//:ch_qos_logback_logback_core",
        "@maven//:io_ebean_ebean",
        "@maven//:io_ebean_ebean_annotation",
        "@maven//:io_github_lognet_grpc_spring_boot_starter",
        "@maven//:javax_annotation_javax_annotation_api",
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:org_postgresql_postgresql",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_springframework_boot_spring_boot",
        "@maven//:org_springframework_boot_spring_boot_starter",
        "@maven//:org_springframework_boot_spring_boot_starter_thymeleaf",
        "@maven//:org_springframework_boot_spring_boot_autoconfigure",
        "@maven//:org_springframework_boot_spring_boot_starter_web",
        "@maven//:org_springframework_spring_beans",
        "@maven//:org_springframework_spring_context",
        "@maven//:org_springframework_spring_web",
    ],
)

java_binary(
    name = "cdp-outalator-server",
    main_class = "codes.showme.pinecone.cdp.outalator.Main",
    resources = [
        "//cdp-outalator-server/src/main/resources:cdp-outalator-server-resource",
    ],
    visibility = ["//visibility:public"],
    runtime_deps = [
        ":cdp-outalator-server-lib",
    ],
)
