load("@rules_proto_grpc//java:defs.bzl", "java_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc//java:defs.bzl", "java_grpc_library")
load("@rules_proto_grpc//python:defs.bzl", "python_grpc_library")
load("@vaticle_bazel_distribution//maven:rules.bzl", "assemble_maven", "deploy_maven")

proto_library(
    name = "cdp_event_proto",
    srcs = ["src/main/proto/cdpEvent.proto"],
    visibility = ["//visibility:public"],
)

java_proto_library(
    name = "cdp_event_java_proto",
    protos = ["//cdp-pb:cdp_event_proto"],
    visibility = ["//visibility:public"],
)

java_grpc_library(
    name = "cdp_event_java_grpc",
    protos = ["//cdp-pb:cdp_event_proto"],
    visibility = ["//visibility:public"],
)

python_grpc_library(
    name = "cdp_event_python_grpc",
    protos = ["//cdp-pb:cdp_event_proto"],
    visibility = ["//visibility:public"],
)

assemble_maven(
    name = "assemble-maven",
    #    version_file = "//central-sync:VERSION",
    license = "mit",
    project_name = "cdp pb",
    target = ":cdp_event_java_grpc",
)

proto_library(
    name = "code_analysis_proto",
    srcs = ["src/main/proto/codeAnalysis.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:empty_proto",
    ],
)

java_proto_library(
    name = "code_analysis_java_proto",
    protos = ["//cdp-pb:code_analysis_proto"],
    visibility = ["//visibility:public"],
)

java_grpc_library(
    name = "code_analysis_java_grpc",
    protos = ["//cdp-pb:code_analysis_proto"],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "docker_image_artifact_proto",
    srcs = ["src/main/proto/dockerImageArtifact.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:empty_proto",
    ],
)

java_proto_library(
    name = "docker_image_artifact_java_proto",
    protos = ["//cdp-pb:docker_image_artifact_proto"],
    visibility = ["//visibility:public"],
)

java_grpc_library(
    name = "docker_image_artifact_java_grpc",
    protos = ["//cdp-pb:docker_image_artifact_proto"],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "java_artifact_proto",
    srcs = ["src/main/proto/javaArtifact.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:empty_proto",
    ],
)

java_proto_library(
    name = "java_artifact_java_proto",
    protos = [":java_artifact_proto"],
    visibility = ["//visibility:public"],
)

java_grpc_library(
    name = "java_artifact_java_grpc",
    protos = [":java_artifact_proto"],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "tar_artifact_proto",
    srcs = ["src/main/proto/tarArtifact.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:empty_proto",
    ],
)

java_proto_library(
    name = "tar_artifact_java_proto",
    protos = [":tar_artifact_proto"],
    visibility = ["//visibility:public"],
)

java_grpc_library(
    name = "tar_artifact_java_grpc",
    protos = [":tar_artifact_proto"],
    visibility = ["//visibility:public"],
)
