load("@rules_java//java:defs.bzl", "java_test")

java_library(
    name = "cdp-tech-common-impl",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = glob(["src/main/resources/**"]),
    visibility = ["//visibility:public"],
    deps = [
        "//cdp-tech-common",
        "@maven//:com_fasterxml_jackson_core_jackson_core",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:org_slf4j_slf4j_api",
    ],
)

java_test(
    name = "json_service_unittest",
    size = "small",
    srcs = ["src/test/java/codes/showme/pinecone/cdp/techcommon/JsonServiceImplTest.java"],
    test_class = "codes.showme.pinecone.cdp.techcommon.JsonServiceImplTest",
    deps = [
        ":cdp-tech-common-impl",
        "//:java_test_deps",
    ],
)
