java_library(
    name = "postgres-repository",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = glob(["src/main/resources/**"]),
    visibility = ["//visibility:public"],
    deps = [
        "//cdp-domain",
        "//cdp-tech-common",
        "@maven//:ch_qos_logback_logback_core",
        "@maven//:io_ebean_ebean",
        "@maven//:io_ebean_ebean_annotation",
        "@maven//:io_ebean_ebean_api",
        "@maven//:javax_annotation_javax_annotation_api",
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:org_postgresql_postgresql",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_springframework_spring_beans",
        "@maven//:org_springframework_spring_context",
    ],
)
