java_library(
    name = "postgres-repository",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = glob(["src/main/resources/**"]),
    visibility = ["//visibility:public"],
    deps = [
        "//cdp-domain",
        "//cdp-tech-common",
        "@maven//:ch_qos_logback_logback_core",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_fasterxml_jackson_core_jackson_core",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_vladmihalcea_hibernate_types_52",
        "@maven//:io_ebean_ebean",
        "@maven//:io_ebean_ebean_annotation",
        "@maven//:io_ebean_ebean_api",
        "@maven//:io_ebean_ebean_core",
        "@maven//:io_ebean_ebean_datasource_api",
        "@maven//:javax_annotation_javax_annotation_api",
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:org_postgresql_postgresql",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_springframework_spring_beans",
        "@maven//:org_springframework_spring_context",
    ],
)

java_test(
    name = "ddlgenerate",
    size = "medium",
    srcs = ["src/test/java/codes/showme/pinecone/cdp/domain/DDLGenerate.java"],
    jvm_flags = [
        # agent
        "-javaagent:$(location @maven//:io_ebean_ebean_agent)",
    ],
    test_class = "codes.showme.pinecone.cdp.domain.DDLGenerate",
    deps = [
        ":postgres-repository",
        "//:java_test_deps",
        "//cdp-domain",
        "@maven//:io_ebean_ebean_agent",
        "@maven//:io_ebean_ebean_api",
        "@maven//:io_ebean_ebean_datasource_api",
    ],
)
