java_library(
    name = "spring-ioc-impl",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = glob(["src/main/resources/**"]),
        visibility = ["//visibility:public"],
    deps = [
        "@maven//:org_springframework_spring_context",
        "@maven//:org_springframework_spring_beans",
        "//cdp-tech-common",
    ],
)
